doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Fernando\Desktop\tech-support-v1-master
-d
C:\Users\Fernando\Desktop\tech-support-v1-master\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\Fernando\Desktop\tech-support-v1-master\EjercicioR868.java
<---- end of javadoc command ---->
Loading source file C:\Users\Fernando\Desktop\tech-support-v1-master\EjercicioR868.java...
C:\Users\Fernando\Desktop\tech-support-v1-master\EjercicioR868.java:13: error: <identifier> expected
            if(aprobado.)
                        ^
C:\Users\Fernando\Desktop\tech-support-v1-master\EjercicioR868.java:15: error: illegal start of statement
        }
        ^
2 errors
